--- a/QR-Scanner/package.json
+++ b/QR-Scanner/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.15",
     "express": "^5.1.0",
+    "jsqr": "^1.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
