--- a/QR-Scanner/package.json
+++ b/QR-Scanner/package.json
@@ -31,6 +31,9 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.15",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
+    "@zxing/ngx-scanner": "^21.0.0",
     "express": "^5.1.0",
     "jsqr": "^1.4.0",
     "rxjs": "~7.8.0",
